src/manifests/deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres-deployment
  namespace: nginx-ingress
  labels:
    app: postgres
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
      - name: postgres
        image: postgres:16
        ports:
        - containerPort: 5432
        volumeMounts:
        - name: initdb  # For initialization scripts 
          mountPath: /docker-entrypoint-initdb.d/
        - name: postgres-storage
          mountPath: /var/lib/postgresql/data
      volumes:
      - name: initdb   
        hostPath:
          path: /vagrant/services/database
      - name: postgres-storage  # This volume is sourced from the PVC
        persistentVolumeClaim:
          claimName: postgres-pvc  # Must match the name in pvc.yaml

 
---
apiVersion: v1
kind: Service
metadata:
  name: postgres-service
  namespace: nginx-ingress
spec:
  selector:
    app: postgres
  ports:
  - port: 5432
    targetPort: 5432
---
# RabbitMQ Deployment and Service
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rabbitmq-deployment
  namespace: nginx-ingress
  labels:
    app: rabbitmq
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rabbitmq
  template:
    metadata:
      labels:
        app: rabbitmq
    spec:
      containers:
      - name: rabbitmq
        image: rabbitmq:3-management-alpine
        ports:
        - containerPort: 5672
        - containerPort: 15672
---
apiVersion: v1
kind: Service
metadata:
  name: rabbitmq-service
  namespace: nginx-ingress
spec:
  selector:
    app: rabbitmq
  ports:
  - name: amqp
    port: 5672
    targetPort: 5672
  - name: management
    port: 15672
    targetPort: 15672
---
# Session Deployment and Service
apiVersion: apps/v1
kind: Deployment
metadata:
  name: session-deployment
  namespace: nginx-ingress
  labels:
    env: prod
    app: session
spec:
  replicas: 1
  selector:
    matchLabels:
      app: session
  template:
    metadata:
      labels:
        app: session
        env: prod
    spec:
      containers:
      - name: session
        image: maelysje/session-service:v2
        ports:
        - containerPort: 8081
---
apiVersion: v1
kind: Service
metadata:
  name: session-service
  namespace: nginx-ingress
spec:
  selector:
    app: session
  ports:
  - port: 8081
    targetPort: 8081
---
# Hotel Deployment and Service
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hotel-deployment
  namespace: nginx-ingress
  labels:
    env: prod
    app: hotel
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hotel
  template:
    metadata:
      labels:
        app: hotel
        env: prod
    spec:
      containers:
      - name: hotel
        image: maelysje/hotel-service:v2
        ports:
        - containerPort: 8082
---
apiVersion: v1
kind: Service
metadata:
  name: hotel-service
  namespace: nginx-ingress
spec:
  selector:
    app: hotel
  ports:
  - port: 8082
    targetPort: 8082
---
# Payment Deployment and Service
apiVersion: apps/v1
kind: Deployment
metadata:
  name: payment-deployment
  namespace: nginx-ingress
  labels:
    env: prod
    app: payment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: payment
  template:
    metadata:
      labels:
        app: payment
        env: prod
    spec:
      containers:
      - name: payment
        image: maelysje/payment-service:v2
        ports:
        - containerPort: 8084
---
apiVersion: v1
kind: Service
metadata:
  name: payment-service
  namespace: nginx-ingress
spec:
  selector:
    app: payment
  ports:
  - port: 8084
    targetPort: 8084
---
# Loyalty Deployment and Service
apiVersion: apps/v1
kind: Deployment
metadata:
  name: loyalty-deployment
  namespace: nginx-ingress
  labels:
    env: prod
    app: loyalty
spec:
  replicas: 1
  selector:
    matchLabels:
      app: loyalty
  template:
    metadata:
      labels:
        app: loyalty
        env: prod
    spec:
      containers:
      - name: loyalty
        image: maelysje/loyalty-service:v2
        ports:
        - containerPort: 8085
---
apiVersion: v1
kind: Service
metadata:
  name: loyalty-service
  namespace: nginx-ingress
spec:
  selector:
    app: loyalty
  ports:
  - port: 8085
    targetPort: 8085
---
# Report Deployment and Service
apiVersion: apps/v1
kind: Deployment
metadata:
  name: report-deployment
  namespace: nginx-ingress
  labels:
    env: prod
    app: report
spec:
  replicas: 1
  selector:
    matchLabels:
      app: report
  template:
    metadata:
      labels:
        app: report
        env: prod
    spec:
      containers:
      - name: report
        image: maelysje/report-service:v2
        ports:
        - containerPort: 8086
---
apiVersion: v1
kind: Service
metadata:
  name: report-service
  namespace: nginx-ingress
spec:
  selector:
    app: report
  ports:
  - port: 8086
    targetPort: 8086
---
# Booking Deployment and Service
apiVersion: apps/v1
kind: Deployment
metadata:
  name: booking-deployment
  namespace: nginx-ingress
  labels:
    env: prod
    app: booking
spec:
  replicas: 1
  selector:
    matchLabels:
      app: booking
  template:
    metadata:
      labels:
        app: booking
        env: prod
    spec: 
      containers:
      - name: booking
        image: maelysje/booking-service:v2
        ports:
        - containerPort: 8083
---

apiVersion: v1
kind: Service
metadata:
  name: booking-service
  namespace: nginx-ingress
spec:
  selector:
    app: booking
  ports:
  - port: 8083
    targetPort: 8083
---
# Gateway Deployment and Service
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gateway-deployment
  namespace: nginx-ingress
  labels:
    env: prod
    app: gateway
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gateway
  template:
    metadata:
      labels:
        app: gateway
        env: prod
    spec:
      containers:
      - name: gateway
        image: maelysje/gateway-service:v2
        ports:
        - containerPort: 8087
---
apiVersion: v1
kind: Service
metadata:
  name: gateway-service
  namespace: nginx-ingress
spec:
  selector:
    app: gateway
  ports:
  - port: 8087
    targetPort: 8087
